Prikaz ekstenzija kod zahteva i sertifikata

--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
@@ -159,7 +159,7 @@
                 </div>
                 <div *ngIf="templejt.basicConstraintsEkstenzije" class="block">
                     <button class="button is-danger is-outlined" (click)="open(basicConstraintsEkstenzije)">Basic Constraints</button>&nbsp;&nbsp;
-                    <button (click)="templejt.basicConstraintsEkstenzije = false;" class="button is-danger" >X</button>
+                    <button (click)="templejt.basicConstraintsEkstenzije = false;" class="button is-danger" >X</button><br>
                 </div>
                 <div *ngIf="templejt.extendedKeyUsageEkstenzije" class="block">
                     <button class="button is-danger is-outlined" (click)="open(extendedKeyUsageEkstenzije)">Extended Key Usage</button>&nbsp;&nbsp;
