--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
@@ -45,8 +45,8 @@
     </tfoot>
     <tbody *ngFor="let zahtev of lista">
         <tr (click)="idiNaZahtev(zahtev.id)">
-            <td>{{zahtev.startDate}}</td>
-            <td>{{zahtev.endDate}}</td>
+            <td>{{zahtev.startDate | date:'dd.MM.yyyy HH:mm'}}</td>
+            <td>{{zahtev.endDate | date:'dd.MM.yyyy HH:mm'}}</td>
             <td>{{zahtev.namena}}</td>
             <td>{{zahtev.emailPotvrda}}</td>
             <td>{{zahtev.potvrdjenZahtev}}</td>
