--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
@@ -17,7 +17,7 @@
                 <abbr title="Potvrdjen zahtev od emaila">PZE</abbr>
             </th>
             <th>
-                Prihvaćen zahtev
+                Pogledan zahtev
             </th>
         </tr>
     </thead>
@@ -39,7 +39,7 @@
                 <abbr title="Potvrdjen zahtev od emaila">PZE</abbr>
             </th>
             <th>
-                Prihvaćen zahtev
+                Pogledan zahtev
             </th>
         </tr>
     </tfoot>
