--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
@@ -120,7 +120,11 @@
             </button><br>
             <br>
         <button class="button is-outlined" (click)="natrag()">Natrag</button>&nbsp;&nbsp;
-        
+
+        <button *ngIf="getRole()==='ROLE_ADMIN' && !zahtev.prihvacen && zahtev.potvrdjenZahtev"
+        [ngClass]="[status ? 'button is-link is-outlined' : 'button is-link is-outlined is-loading']" 
+        (click)="odbijZahtev()">Odbij zahtev</button><br><br>
+
         <button *ngIf="getRole()==='ROLE_ADMIN' && !zahtev.prihvacen && zahtev.potvrdjenZahtev"
         [ngClass]="[status ? 'button is-danger is-outlined' : 'button is-danger is-outlined is-loading']" 
         (click)="napraviSertifikat()">Napravi sertifikat</button>
